# claude-code-setup-evaluator

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.project.md  CLAUDE.md  GUIDE.md  README.md  ai-workspace.toml  evaluate-setup-deep-log_.md  evaluate-setup-report_.md  instructions.md  pyproject.toml
.ai-workspace/lib/: config.py  repository_status.py
.ai-workspace/scripts/: align-workspace.py  branch-guard.sh  session-start.py  setup.py  skill-suggest.sh  transpile-commands.py  transpile-skills.py
.ai-workspace/tests/: test-hooks.sh
.claude/: settings.json
.claude/commands/: ai-engineer-review.md  architecture-docs.md  check-code.md  diff-explain.md  env-check.md  evaluate-setup.md  evaluate-skill.md  explain-code.md  explain-simple.md  focus.md  plan.md  prompt-test.md  quality-gate.md  recap.md  refactor-safe.md  repo-sync.md  review.md  test-coverage.md  toolkit.md  verify.md
.cursor/commands/: architecture-docs.md  env-check.md  evaluate-setup.md  prompt-test.md  (+2 more)
agent-docs/: codebase-onboarding.md  deep-research.md  mcp-patterns.md  subagent-driven-development.md  writing-skills.md
docs/: HOW-EVALUATE-SKILL-WORKS.md  spec.md
scripts/evaluate-setup/: pyproject.toml
scripts/evaluate-setup/src/the_evaluator/: cli.py  deep_eval.py
scripts/evaluate-setup/src/the_evaluator/config/presets/: security.py  strict.py
scripts/evaluate-setup/src/the_evaluator/engine/: __init__.py  engine.py  fixer.py  suppression.py  types.py
scripts/evaluate-setup/src/the_evaluator/rules/: __init__.py
scripts/evaluate-setup/src/the_evaluator/rules/agents/: constraint_body_match.py  disallowed_tools_parseable.py  no_credential_access.py  no_prompt_injection.py  referenced_skills_exist.py
scripts/evaluate-setup/src/the_evaluator/rules/claude_md/: exists.py  skill_duplication.py
scripts/evaluate-setup/src/the_evaluator/rules/commands/: description_required.py  duplicate_detection.py  no_credential_access.py  no_prompt_injection.py  skill_overlap.py
scripts/evaluate-setup/src/the_evaluator/rules/content/: broken_references.py  duplicate_detection.py  token_budget.py
scripts/evaluate-setup/src/the_evaluator/rules/frontmatter/: description_quality.py  description_required.py  format_valid.py
scripts/evaluate-setup/src/the_evaluator/rules/security/: no_credential_access.py  no_prompt_injection.py
scripts/evaluate-setup/src/the_evaluator/rules/structural/: skill_md_exists.py
tests/: test_command_prompts.py  test_evaluate_runner.py  test_workspace_scripts.py
(+115 files in other folders)
