[project]
name = "claude-code-setup-evaluator"
version = "1.0.0"
description = "Claude Code workspace with built-in setup evaluation for skills, commands, CLAUDE.md, and hooks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=9.0.1",
    "click>=8.0",
    "httpx>=0.24",
    "python-dotenv>=1.0",
]
