[project]
name = "claude-code-setup-evaluator"
version = "1.0.0"
description = "Claude Code workspace with shared skills, commands, and hooks for day-to-day development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=9.0.1",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["archive"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
