[project]
name = "the-evaluator"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "scikit-learn>=1.0",
]

[project.scripts]
evaluate-setup = "the_evaluator.cli:cli"

[project.optional-dependencies]
deep = [
    "anthropic>=0.40",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/the_evaluator"]
